samples/_failures_safe/1761437837_99cdac_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35d0989e.c: In function ‘print_state’:
./samples/SAFE/__tmp_35d0989e.c:152:5: error: expected expression at end of input
  152 |     const char *state_names[] = {
      |     ^~~~~
./samples/SAFE/__tmp_35d0989e.c:152:5: error: expected declaration or statement at end of input
